--- a/sections/a.front/biblio.tex
+++ b/sections/a.front/biblio.tex
@@ -33,6 +33,7 @@
 \nocite{protege5devdocs}
 \nocite{reiter1987theory}
 \nocite{schulz2018role}
+\nocite{lambrix2023completing}
 \nocite{ji2014measuring}
 \nocite{du2014practical}
 \nocite{haase2007analysis}
