--- a/sections/c.back/a.sroiq/1.sroiq-syn.tex
+++ b/sections/c.back/a.sroiq/1.sroiq-syn.tex
@@ -1,5 +1,5 @@
 
-The \emph{vocabulary}\footnote{There are no strict rules for how to write down different elements of the vocabulary. However, there is a convention of using PascalCase for concept names and camelCase for names referring to roles and individuals.} $\mathrm{N} = \mathrm{N}_I \cup \mathrm{N}_C \cup \mathrm{N}_R$ of a $\SROIQ$ ontology is made up of three disjoint sets:
+The \emph{vocabulary}\footnote{There are no strict rules for how to write down different elements of the vocabulary. However, there is a convention of using PascalCase for concept names and camelCase for names referring to roles and individuals.} $\mathrm{N} = \mathrm{N}_I \cup \mathrm{N}_C \cup \mathrm{N}_R$ of a $\SROIQ$ ontology is made up of three finite disjoint sets:
 \begin{itemize}
     \item The set of \emph{individual names} $\mathrm{N}_I$ used to refer to single elements in the domain of discourse.
     \item The set of \emph{concept names} $\mathrm{N}_C$ used to refer to classes that elements of the domain may be a part of.
@@ -46,7 +46,7 @@ where $n > 1$ and $R$, $S$, $S_1, \cdots, S_n$ are roles such that $S \preceq R$
 % TODO
 \end{example}
 
-To make axiom weakening simpler, this definition is slightly more general than necessary. The definition of regularity presented here is more permissive than the one in \cite{horrocks2006even} in that it always allows simple roles on the left-hand side similar to what has been described in \cite{rudolph2011foundations}. However, it is more permissive than stated in \cite{rudolph2011foundations} in that it allows for inverse roles on the right-hand side. This definition of regularity aligns with implementation of the OWL 2 DL \cite{motik2012ontology} profile checker in the OWL API \cite{horridge2011owl}.
+To make axiom weakening simpler, this definition is slightly more general than necessary. The definition of regularity presented here is more permissive than the one in \cite{horrocks2006even} in that it always allows simple roles on the left-hand side similar to what has been described in \cite{rudolph2011foundations}. However, it is more permissive than stated in \cite{rudolph2011foundations} in that it allows for inverse roles on the right-hand side. This definition of regularity aligns more closely with the implementation of the OWL 2 DL \cite{motik2012ontology} profile checker in the OWL API \cite{horridge2011owl,owlapi}.
 
 The set of \emph{role assertions} $\Rmc_a$ is a finite set of statements with the form $\disjoint(S_1, S_2)$ (\emph{disjointness}) where $S_1$, and $S_2$ are simple roles in $\Rmc_h$. In \cite{horrocks2006even} the authors define additionally the role assertions $\mathrm{Sym}(R)$ (\emph{symmetry}), $\mathrm{Asy}(S)$ (\emph{asymmetry}), $\mathrm{Tra}(R)$ (\emph{transitivity}), $\mathrm{Ref}(R)$ (\emph{reflexivity}), and $\mathrm{Irr}(R)$ (\emph{irreflexivity}). These additional assertions can, however, be written using the alternative sets of axioms $\{ \inv(R) \sqsubseteq R \}$, $\{ \disjoint(R, \inv(R)) \}$, $\{ R \circ R \sqsubseteq R \}$, $\{ r' \sqsubseteq R , \top \sqsubseteq \exists r'.\self \}$, and $\{ \top \sqsubseteq \lnot \exists R.\self \}$ respectively. Note that the asymmetry assertion requires a simple role, and that $r'$ in the case of reflexivity must be a fresh role name not otherwise used in the ontology\footnote{This is necessary to allow the use of non-simple roles in a reflexivity assertion. Multiple assertions can share the same role name $r'$.}.
 
